--- a/it/bambini-e-minori/index.htm
+++ b/it/bambini-e-minori/index.htm
@@ -4139,49 +4139,49 @@
                   {
                     "language": { "code": "it", "name": "Italiano" },
                     "page": {
-                      "url": "/it/bambini-e-minori/",
+                      "url": "/it/bambini-e-minori/index.htm",
                       "title": "Bambini e minori"
                     }
                   },
                   {
                     "language": { "code": "en", "name": "Inglese" },
                     "page": {
-                      "url": "/en/children-and-minors/",
+                      "url": "/en/children-and-minors/index.htm",
                       "title": "Children \u0026 Minors"
                     }
                   },
                   {
                     "language": { "code": "nl", "name": "Olandese" },
                     "page": {
-                      "url": "/nl/kinderen-en-minderjarigen/",
+                      "url": "/nl/kinderen-en-minderjarigen/index.htm",
                       "title": "Kinderen en minderjarigen"
                     }
                   },
                   {
                     "language": { "code": "de", "name": "Tedesco" },
                     "page": {
-                      "url": "/de/kinder-und-minderj%C3%A4hrige/",
+                      "url": "/de/kinder-und-minderj%C3%A4hrige/index.htm",
                       "title": "Kinder und Minderjährige"
                     }
                   },
                   {
                     "language": { "code": "fr", "name": "Francese" },
                     "page": {
-                      "url": "/fr/enfants-et-mineurs/",
+                      "url": "/fr/enfants-et-mineurs/index.htm",
                       "title": "Enfants et mineurs"
                     }
                   },
                   {
                     "language": { "code": "es", "name": "Spagnolo" },
                     "page": {
-                      "url": "/es/ni%C3%B1os-y-menores-de-edad/",
+                      "url": "/es/ni%C3%B1os-y-menores-de-edad/index.htm",
                       "title": "Niños y menores de edad"
                     }
                   },
                   {
                     "language": { "code": "pt", "name": "Portoghese" },
                     "page": {
-                      "url": "/pt/crian%C3%A7as-e-menores-de-idade/",
+                      "url": "/pt/crian%C3%A7as-e-menores-de-idade/index.htm",
                       "title": "Crianças e menores de idade"
                     }
                   }
@@ -4403,55 +4403,55 @@
             "menu": [
               {
                 "title": "Scopri i nostri tour",
-                "url": "/it/scopri-i-nostri-tour/",
+                "url": "/it/scopri-i-nostri-tour/index.htm",
                 "children": [
                   {
                     "title": "Heineken® Tour + Rooftop",
-                    "url": "/it/scopri-i-nostri-tour/heineken-tour-rooftop-it/",
+                    "url": "/it/scopri-i-nostri-tour/heineken-tour-rooftop-it/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Tour",
-                    "url": "/it/scopri-i-nostri-tour/heineken-tour/",
+                    "url": "/it/scopri-i-nostri-tour/heineken-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Flagship Cruise",
-                    "url": "/it/scopri-i-nostri-tour/heineken-flagship-cruise-it/",
+                    "url": "/it/scopri-i-nostri-tour/heineken-flagship-cruise-it/index.htm",
                     "new": true
                   },
                   {
                     "title": "Rock the City",
-                    "url": "/it/scopri-i-nostri-tour/rock-the-city/",
+                    "url": "/it/scopri-i-nostri-tour/rock-the-city/index.htm",
                     "new": false
                   },
                   {
                     "title": "VIP Tour",
-                    "url": "/it/scopri-i-nostri-tour/vip-tour/",
+                    "url": "/it/scopri-i-nostri-tour/vip-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "The Perfect Match",
-                    "url": "/it/scopri-i-nostri-tour/the-perfect-match/",
+                    "url": "/it/scopri-i-nostri-tour/the-perfect-match/index.htm",
                     "new": false
                   }
                 ]
               },
               {
                 "title": "Riunioni ed eventi",
-                "url": "/it/riunioni-ed-eventi/",
+                "url": "/it/riunioni-ed-eventi/index.htm",
                 "children": [
                   {
                     "title": "Scopri i nostri spazi",
-                    "url": "/it/riunioni-ed-eventi/scopri-i-nostri-spazi/"
+                    "url": "/it/riunioni-ed-eventi/scopri-i-nostri-spazi/index.htm"
                   },
                   {
                     "title": "I nostri servizi",
-                    "url": "/it/riunioni-ed-eventi/i-nostri-servizi/"
+                    "url": "/it/riunioni-ed-eventi/i-nostri-servizi/index.htm"
                   },
                   {
                     "title": "Contattaci",
-                    "url": "/it/riunioni-ed-eventi/contattaci/"
+                    "url": "/it/riunioni-ed-eventi/contattaci/index.htm"
                   }
                 ]
               },
@@ -4459,74 +4459,74 @@
                 "title": "Assistenza e contatti",
                 "url": "/it/assistenza-e-contatti/"
               },
-              { "title": "Buono regalo", "url": "/it/buono-regalo/" },
+              { "title": "Buono regalo", "url": "/it/buono-regalo/index.htm" },
               {
                 "title": "Heineken® Flagship Store",
-                "url": "/it/heineken-store-it/"
+                "url": "/it/heineken-store-it/index.htm"
               }
             ],
             "footer": {
               "main": [
                 {
                   "title": "Informazioni sull’esperienza",
-                  "url": "/it/informazioni-sullesperienza/",
+                  "url": "/it/informazioni-sullesperienza/index.htm",
                   "new": false
                 },
                 {
                   "title": "Scopri i nostri tour",
-                  "url": "/it/scopri-i-nostri-tour/",
+                  "url": "/it/scopri-i-nostri-tour/index.htm",
                   "new": false
                 },
                 {
                   "title": "Domande frequenti",
-                  "url": "/it/domande-frequenti/",
+                  "url": "/it/domande-frequenti/index.htm",
                   "new": false
                 },
                 {
                   "title": "Assistenza e contatti",
-                  "url": "/it/assistenza-e-contatti/",
+                  "url": "/it/assistenza-e-contatti/index.htm",
                   "new": false
                 },
                 {
                   "title": "Bambini e minori",
-                  "url": "/it/bambini-e-minori/",
+                  "url": "/it/bambini-e-minori/index.htm",
                   "new": false
                 },
                 {
                   "title": "Rinvio della visita e rimborsi",
-                  "url": "/it/rinvio-della-visita-e-rimborsi/",
+                  "url": "/it/rinvio-della-visita-e-rimborsi/index.htm",
                   "new": false
                 },
                 {
                   "title": "Buono regalo",
-                  "url": "/it/buono-regalo/",
+                  "url": "/it/buono-regalo/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken® Flagship Store",
-                  "url": "/it/heineken-store-it/",
+                  "url": "/it/heineken-store-it/index.htm",
                   "new": false
                 }
               ],
               "event": [
                 {
                   "title": "Riunioni ed eventi",
-                  "url": "/it/riunioni-ed-eventi/",
+                  "url": "/it/riunioni-ed-eventi/index.htm",
                   "new": false
                 },
                 {
                   "title": "Scopri i nostri spazi",
-                  "url": "/it/riunioni-ed-eventi/scopri-i-nostri-spazi/",
+                  "url": "/it/riunioni-ed-eventi/scopri-i-nostri-spazi/index.htm",
                   "new": false
                 },
                 {
                   "title": "Best 'Dam Bar",
-                  "url": "/it/riunioni-ed-eventi/best-dam-bar-it/",
+                  "url": "/it/riunioni-ed-eventi/best-dam-bar-it/index.htm",
                   "new": false
                 },
                 {
                   "title": "I nostri servizi",
-                  "url": "/it/riunioni-ed-eventi/i-nostri-servizi/",
+                  "url": "/it/riunioni-ed-eventi/i-nostri-servizi/index.htm",
                   "new": false
                 }
               ],
@@ -4538,27 +4538,27 @@
                 },
                 {
                   "title": "Informativa sulla privacy",
-                  "url": "/it/informativa-sulla-privacy/",
+                  "url": "/it/informativa-sulla-privacy/index.htm",
                   "new": false
                 },
                 {
                   "title": "Informativa sui cookie",
-                  "url": "/it/informativa-sui-cookie/",
+                  "url": "/it/informativa-sui-cookie/index.htm",
                   "new": false
                 },
                 {
                   "title": "Termini e condizioni",
-                  "url": "/it/termini-e-condizioni/",
+                  "url": "/it/termini-e-condizioni/index.htm",
                   "new": false
                 },
                 {
                   "title": "Domande frequenti",
-                  "url": "/it/domande-frequenti/",
+                  "url": "/it/domande-frequenti/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken Experience Visitor House Rules",
-                  "url": "/it/house-rules-it/",
+                  "url": "/it/house-rules-it/index.htm",
                   "new": false
                 }
               ],
@@ -4567,7 +4567,7 @@
             },
             "booking_settings": { "booking_window": 145 },
             "checkout_page": {
-              "url": "/it/checkout/",
+              "url": "/it/checkout/index.htm",
               "menu_button_text": "Acquista i biglietti"
             },
             "languages": [
