--- a/it/email/index.htm
+++ b/it/email/index.htm
@@ -353,7 +353,7 @@
               <nav>
                 <ul>
                   <li>
-                    <a href="https://www.heinekenexperience.com/en/faqs/"
+                    <a href="#"
                       >FAQ</a
                     >
                   </li>
@@ -362,7 +362,7 @@
                                 <li><a href="/pt/discover-our-tours/">Discover our tours</a></li>-->
                   <li>
                     <a
-                      href="https://www.heinekenexperience.com/en/service-and-contact/"
+                      href="#"
                       >Service &amp; Contact</a
                     >
                   </li>
@@ -373,26 +373,26 @@
                   <!--<li><a href="/pt/privacy-policy/">Cookie Settings</a></li>-->
                   <li>
                     <a
-                      href="https://www.heinekenexperience.com/en/privacy-policy/"
+                      href="#"
                       >Privacy Policy</a
                     >
                   </li>
                   <li>
                     <a
-                      href="https://www.heinekenexperience.com/en/cookie-policy/"
+                      href="#"
                       >Cookie Policy</a
                     >
                   </li>
                   <li>
                     <a
-                      href="https://www.heinekenexperience.com/en/terms-and-conditions/"
+                      href="#"
                       target="_blank"
                       rel="noopener noreferrer"
                       >Terms &amp; Conditions</a
                     >
                   </li>
                   <li>
-                    <a href="https://www.theheinekencompany.com"
+                    <a href="#"
                       >Heineken Company</a
                     >
                   </li>
@@ -406,7 +406,7 @@
                                     </span>
                                 </button>-->
                   <a
-                    href="https://www.instagram.com/heinekenexperience/"
+                    href="#"
                     target="_blank"
                   >
                     <button>
