--- a/it/rinvio-della-visita-e-rimborsi/index.htm
+++ b/it/rinvio-della-visita-e-rimborsi/index.htm
@@ -4694,49 +4694,49 @@
                   {
                     "language": { "code": "it", "name": "Italiano" },
                     "page": {
-                      "url": "/it/rinvio-della-visita-e-rimborsi/",
+                      "url": "/it/rinvio-della-visita-e-rimborsi/index.htm",
                       "title": "Rinvio della visita e rimborsi"
                     }
                   },
                   {
                     "language": { "code": "en", "name": "Inglese" },
                     "page": {
-                      "url": "/en/rescheduling-and-refund/",
+                      "url": "/en/rescheduling-and-refund/index.htm",
                       "title": "Rescheduling and refund"
                     }
                   },
                   {
                     "language": { "code": "nl", "name": "Olandese" },
                     "page": {
-                      "url": "/nl/bezoek-verplaatsen-en-terugbetalingen/",
+                      "url": "/nl/bezoek-verplaatsen-en-terugbetalingen/index.htm",
                       "title": "Bezoek verplaatsen en terugbetalingen"
                     }
                   },
                   {
                     "language": { "code": "de", "name": "Tedesco" },
                     "page": {
-                      "url": "/de/verschieben-oder-r%C3%BCckerstatten/",
+                      "url": "/de/verschieben-oder-r%C3%BCckerstatten/index.htm",
                       "title": "Verschieben oder rückerstatten"
                     }
                   },
                   {
                     "language": { "code": "fr", "name": "Francese" },
                     "page": {
-                      "url": "/fr/changement-de-date-et-remboursement/",
+                      "url": "/fr/changement-de-date-et-remboursement/index.htm",
                       "title": "Changement de date et remboursement"
                     }
                   },
                   {
                     "language": { "code": "es", "name": "Spagnolo" },
                     "page": {
-                      "url": "/es/cambio-de-fecha-hora-y-reembolso/",
+                      "url": "/es/cambio-de-fecha-hora-y-reembolso/index.htm",
                       "title": "Cambio de fecha/hora y reembolso"
                     }
                   },
                   {
                     "language": { "code": "pt", "name": "Portoghese" },
                     "page": {
-                      "url": "/pt/reagendamento-e-reembolso/",
+                      "url": "/pt/reagendamento-e-reembolso/index.htm",
                       "title": "Reagendamento e reembolso"
                     }
                   }
@@ -4976,66 +4976,66 @@
             "menu": [
               {
                 "title": "Scopri i nostri tour",
-                "url": "/it/scopri-i-nostri-tour/",
+                "url": "/it/scopri-i-nostri-tour/index.htm",
                 "children": [
                   {
                     "title": "Heineken® Tour + Rooftop",
-                    "url": "/it/scopri-i-nostri-tour/heineken-tour-rooftop-it/",
+                    "url": "/it/scopri-i-nostri-tour/heineken-tour-rooftop-it/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Tour",
-                    "url": "/it/scopri-i-nostri-tour/heineken-tour/",
+                    "url": "/it/scopri-i-nostri-tour/heineken-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Flagship Cruise",
-                    "url": "/it/scopri-i-nostri-tour/heineken-flagship-cruise-it/",
+                    "url": "/it/scopri-i-nostri-tour/heineken-flagship-cruise-it/index.htm",
                     "new": true
                   },
                   {
                     "title": "Rock the City",
-                    "url": "/it/scopri-i-nostri-tour/rock-the-city/",
+                    "url": "/it/scopri-i-nostri-tour/rock-the-city/index.htm",
                     "new": false
                   },
                   {
                     "title": "VIP Tour",
-                    "url": "/it/scopri-i-nostri-tour/vip-tour/",
+                    "url": "/it/scopri-i-nostri-tour/vip-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "The Perfect Match",
-                    "url": "/it/scopri-i-nostri-tour/the-perfect-match/",
+                    "url": "/it/scopri-i-nostri-tour/the-perfect-match/index.htm",
                     "new": false
                   }
                 ]
               },
               {
                 "title": "Riunioni ed eventi",
-                "url": "/it/riunioni-ed-eventi/",
+                "url": "/it/riunioni-ed-eventi/index.htm",
                 "children": [
                   {
                     "title": "Scopri i nostri spazi",
-                    "url": "/it/riunioni-ed-eventi/scopri-i-nostri-spazi/"
+                    "url": "/it/riunioni-ed-eventi/scopri-i-nostri-spazi/index.htm"
                   },
                   {
                     "title": "I nostri servizi",
-                    "url": "/it/riunioni-ed-eventi/i-nostri-servizi/"
+                    "url": "/it/riunioni-ed-eventi/i-nostri-servizi/index.htm"
                   },
                   {
                     "title": "Contattaci",
-                    "url": "/it/riunioni-ed-eventi/contattaci/"
+                    "url": "/it/riunioni-ed-eventi/contattaci/index.htm"
                   }
                 ]
               },
               {
                 "title": "Assistenza e contatti",
-                "url": "/it/assistenza-e-contatti/"
+                "url": "/it/assistenza-e-contatti/index.htm"
               },
-              { "title": "Buono regalo", "url": "/it/buono-regalo/" },
+              { "title": "Buono regalo", "url": "/it/buono-regalo/index.htm" },
               {
                 "title": "Heineken® Flagship Store",
-                "url": "/it/heineken-store-it/"
+                "url": "/it/heineken-store-it/index.htm"
               }
             ],
             "footer": {
@@ -5062,44 +5062,44 @@
                 },
                 {
                   "title": "Bambini e minori",
-                  "url": "/it/bambini-e-minori/",
+                  "url": "/it/bambini-e-minori/index.htm",
                   "new": false
                 },
                 {
                   "title": "Rinvio della visita e rimborsi",
-                  "url": "/it/rinvio-della-visita-e-rimborsi/",
+                  "url": "/it/rinvio-della-visita-e-rimborsi/index.htm",
                   "new": false
                 },
                 {
                   "title": "Buono regalo",
-                  "url": "/it/buono-regalo/",
+                  "url": "/it/buono-regalo/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken® Flagship Store",
-                  "url": "/it/heineken-store-it/",
+                  "url": "/it/heineken-store-it/index.htm",
                   "new": false
                 }
               ],
               "event": [
                 {
                   "title": "Riunioni ed eventi",
-                  "url": "/it/riunioni-ed-eventi/",
+                  "url": "/it/riunioni-ed-eventi/index.htm",
                   "new": false
                 },
                 {
                   "title": "Scopri i nostri spazi",
-                  "url": "/it/riunioni-ed-eventi/scopri-i-nostri-spazi/",
+                  "url": "/it/riunioni-ed-eventi/scopri-i-nostri-spazi/index.htm",
                   "new": false
                 },
                 {
                   "title": "Best 'Dam Bar",
-                  "url": "/it/riunioni-ed-eventi/best-dam-bar-it/",
+                  "url": "/it/riunioni-ed-eventi/best-dam-bar-it/index.htm",
                   "new": false
                 },
                 {
                   "title": "I nostri servizi",
-                  "url": "/it/riunioni-ed-eventi/i-nostri-servizi/",
+                  "url": "/it/riunioni-ed-eventi/i-nostri-servizi/index.htm",
                   "new": false
                 }
               ],
@@ -5111,27 +5111,27 @@
                 },
                 {
                   "title": "Informativa sulla privacy",
-                  "url": "/it/informativa-sulla-privacy/",
+                  "url": "/it/informativa-sulla-privacy/index.htm",
                   "new": false
                 },
                 {
                   "title": "Informativa sui cookie",
-                  "url": "/it/informativa-sui-cookie/",
+                  "url": "/it/informativa-sui-cookie/index.htm",
                   "new": false
                 },
                 {
                   "title": "Termini e condizioni",
-                  "url": "/it/termini-e-condizioni/",
+                  "url": "/it/termini-e-condizioni/index.htm",
                   "new": false
                 },
                 {
                   "title": "Domande frequenti",
-                  "url": "/it/domande-frequenti/",
+                  "url": "/it/domande-frequenti/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken Experience Visitor House Rules",
-                  "url": "/it/house-rules-it/",
+                  "url": "/it/house-rules-it/index.htm",
                   "new": false
                 }
               ],
@@ -5140,7 +5140,7 @@
             },
             "booking_settings": { "booking_window": 145 },
             "checkout_page": {
-              "url": "/it/checkout/",
+              "url": "/it/checkout/index.htm",
               "menu_button_text": "Acquista i biglietti"
             },
             "languages": [
